      games but are not setgid.
    + [RA] Remove the check for files in /usr/lib/cgi-bin.  This policy
      change was reverted.
    + [RA] Allow files installed in /usr/include/X11 and /usr/lib/X11 but
      require Pre-Depends on x11-common (>= 1:7.0.0).  Remove the
      duplicate check for files in /usr/bin/X11 since it no longer adds
      additional information.
  * checks/shared-libs.desc:
    + [RA] Document that exceptions to the -fPIC rule for shared libraries
      are possible and ask that such exceptions be documented with lintian
      overrides.
  * checks/standards-version:
    + [RA] Update to 3.7.2.  (Closes: #366233)
    + [RA] Report the current standards version when warning about too old
      or too new versions.  Thanks, Jari Aalto.  (Closes: #366104)

  * debian/control:
    + [RA] Update standards version to 3.7.2 (no changes required).
    + [RA] Update description to note calibration for Policy 3.7.2.

 -- Russ Allbery <rra@debian.org>  Sat,  6 May 2006 10:05:37 -0700

lintian (1.23.19) unstable; urgency=low

  The "Policy 3.7.0" release

  * checks/fields{.desc,}:
    + [RA] python-all-dev also satisfies dh_python's requirements.
      Thanks, Marc Dequènes (Duck).  (Closes: #364943)
    + [RA] Allow python in Build-Depends if it's invoked explicitly in the
      clean rule.  Thanks, Marc Dequènes (Duck).  (Closes: #365030)
    + [RA] Recognize the CDBS included rule files that indicate dpatch or
      quilt will be used, check those dependencies, and require that they
      be in Build-Depends since they're used for clean.  Thanks, Marc
      Dequènes (Duck).  (Closes: #365041)
  * checks/files{.desc,}:
    + [RA] Add the references to Policy for the deprecation of X11R6
      directories now that Policy has been updated in 3.7.0.0.
    + [RA] Policy now mandates FHS 2.3.  Update tag descriptions.
    + [RA] Warn about files installed in /usr/lib/cgi-bin.  Policy now
      states they should be installed in /usr/lib/cgi-lib.