@@ -25,11 +25,18 @@ binary-arch: build
 	strip --remove-section=.comment --remove-section=.note $(tmp)/boot/hello/hello-static
 	install -d $(tmp)/usr/share/doc/binary
 	install -m 644 INSTALL $(tmp)/usr/share/doc/binary
+	install -d $(tmp)/usr/share/doc/binary/html
+	echo '<html></html>' > $(tmp)/usr/share/doc/binary/html/index.html
+	echo '<html></html>' > $(tmp)/usr/share/doc/binary/html/ch1.html
+	ln -s ../html/./ch1.html $(tmp)/usr/share/doc/binary/html/ch2.html
+	ln -s /usr/share/doc/binary/htm/ch1.html $(tmp)/usr/share/doc/binary/html/ch3.html
 	install -d $(tmp)/usr/share/menu
 	install -d $(tmp)/usr/lib/menu
 	install -d $(tmp)/usr/share/binary
 	install -m 644 debian/menu $(tmp)/usr/share/menu/binary
 	install -m 644 debian/menu $(tmp)/usr/lib/menu/binary
+	install -d $(tmp)/usr/share/doc-base
+	install -m 644 debian/doc-base $(tmp)/usr/share/doc-base/binary
 	install -m 644 debian/README.Debian $(tmp)/usr/share/doc/binary
 	install -m 644 debian/copyright $(tmp)/usr/share/doc/binary
 	install -m 644 debian/changelog $(tmp)/usr/share/doc/binary
