@@ -2,19 +2,29 @@ E: binary source: debian-rules-missing-required-target binary-indep
 E: binary: changelog-file-not-compressed changelog
 E: binary: debian-changelog-file-missing-or-wrong-name
 E: binary: depends-on-x-metapackage depends: xorg
+E: binary: doc-base-file-references-missing-file binary:10 /usr/share/doc/binary/binary.sgml.gz
+E: binary: doc-base-file-references-missing-file binary:14 /usr/share/doc/binary/binary.txt
+E: binary: doc-base-file-references-missing-file binary:18 /usr/share/doc/binary/html/ch4.html
+E: binary: doc-base-file-references-missing-file binary:23 /usr/share/doc/binary/hml/*.html
+E: binary: doc-base-index-references-multiple-files binary:18
 E: binary: file-directly-in-usr-share usr/share/baz
+E: binary: lengthy-symlink usr/share/doc/binary/html/ch2.html ../html/./ch1.html
 E: binary: menu-item-missing-required-tag section /usr/lib/menu/binary:1
 E: binary: menu-item-missing-required-tag section /usr/share/menu/binary:1
 E: binary: non-wm-in-windowmanager-menu-section x11 /usr/lib/menu/binary:4
 E: binary: non-wm-in-windowmanager-menu-section x11 /usr/share/menu/binary:4
+E: binary: postinst-does-not-call-installdocs usr/share/doc-base/binary
 E: binary: postinst-does-not-call-updatemenus usr/lib/menu/binary
 E: binary: postrm-does-not-call-updatemenus usr/lib/menu/binary
+E: binary: prerm-does-not-call-installdocs usr/share/doc-base/binary
 E: binary: statically-linked-binary ./usr/bin/static-hello
 E: binary: su-to-root-without--c /usr/lib/menu/binary:2
 E: binary: su-to-root-without--c /usr/lib/menu/binary:3
 E: binary: su-to-root-without--c /usr/share/menu/binary:2
 E: binary: su-to-root-without--c /usr/share/menu/binary:3
 E: binary: suidregister-used-in-maintainer-script postinst
+E: binary: symlink-contains-spurious-segments usr/share/doc/binary/html/ch2.html ../html/./ch1.html
+E: binary: symlink-should-be-relative usr/share/doc/binary/html/ch3.html /usr/share/doc/binary/htm/ch1.html
 E: binary: unstripped-binary-or-object ./usr/bin/hello
 I: binary source: non-standard-architecture amd64
 I: binary source: non-standard-architecture kfreebsd-i386
@@ -29,6 +39,7 @@ W: binary: binary-without-manpage hello-static
 W: binary: binary-without-manpage hello.static
 W: binary: binary-without-manpage iminusrbin
 W: binary: binary-without-manpage static-hello
+W: binary: doc-base-file-unknown-format binary:13 esp
 W: binary: executable-not-elf-or-script ./usr/bin/iminusrbin
 W: binary: file-in-unusual-dir usr/bar
 W: binary: menu-command-not-in-package /usr/lib/menu/binary:6 /imnothere
